--- a/bundles/org.eclipse.orion.client.git/web/git/git-repository.css
+++ b/bundles/org.eclipse.orion.client.git/web/git/git-repository.css
@@ -26,6 +26,10 @@
 	max-width:700px;
 }
 
+#branchSectionContent .sectionTableItem .stretch {
+	top: 4px;
+}
+
 .activeBranch {
 	font-weight: bold;
 }
